--- a/Script/UML_Clustering_5000_songs.ipynb
+++ b/Script/UML_Clustering_5000_songs.ipynb
@@ -261,7 +261,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#to not drop chategorial column we set them as a compound index\n",
+        "#to not drop chategorial columns we set them as a compound index\n",
         "df = df.set_index(['name', 'artist'])"
       ],
       "metadata": {
